UserServiceImpl debug